--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       <div class="logo">
         <img src="./assets/images/logo.jpg" alt="PVR Developers Logo">
       </div>
+
+      <!-- Hamburger -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
       <nav class="navbar">
         <ul>
           <li><a href="#home" class="active">Home</a></li>
@@ -51,35 +59,37 @@
     </div>
   </header>
 
+
+
   <!-- ===== HERO SECTION ===== -->
   <section id="home" class="hero">
-  <video autoplay muted loop playsinline class="hero-bg">
-    <source src="./assets/images/hero-video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+    <video autoplay muted loop playsinline class="hero-bg">
+      <source src="./assets/images/hero-video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
 
-  <div class="overlay"></div>
+    <div class="overlay"></div>
 
-  <div class="hero-content container">
-    <div class="hero-text">
-      <h5 class="hero-tagline">Designing Dreams, Building Legacies</h5>
-      <h2>Welcome to <span>PVR Developers</span></h2>
-      <h1>
-        Turning <span class="luxury-text">Spaces Into Experiences</span>
-      </h1>
-      <p>
-        From <strong>luxurious living rooms</strong> to <strong>modern kitchens</strong>,  
-        from <strong>elegant bedrooms</strong> to <strong>serene bathrooms</strong> —  
-        every detail we design reflects <em>timeless luxury, vastu harmony, and unmatched craftsmanship</em>.  
-        <br><br>
-        At <strong>PVR Developers</strong>, we don’t just build homes —  
-        we create <span style="color:#d3a87c;font-weight:600;">a lifestyle of elegance and comfort</span>.
-      </p>
-      <a href="#contact" class="btn-primary">Book Your Appointment</a>
-      <a href="#projects" class="btn-secondary">Explore Our Work</a>
+    <div class="hero-content container">
+      <div class="hero-text">
+        <h5 class="hero-tagline">Designing Dreams, Building Legacies</h5>
+        <h2>Welcome to <span>PVR Developers</span></h2>
+        <h1>
+          Turning <span class="luxury-text">Spaces Into Experiences</span>
+        </h1>
+        <p>
+          From <strong>luxurious living rooms</strong> to <strong>modern kitchens</strong>,
+          from <strong>elegant bedrooms</strong> to <strong>serene bathrooms</strong> —
+          every detail we design reflects <em>timeless luxury, vastu harmony, and unmatched craftsmanship</em>.
+          <br><br>
+          At <strong>PVR Developers</strong>, we don’t just build homes —
+          we create <span style="color:#d3a87c;font-weight:600;">a lifestyle of elegance and comfort</span>.
+        </p>
+        <a href="#contact" class="btn-primary">Book Your Appointment</a>
+        <a href="#projects" class="btn-secondary">Explore Our Work</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
