--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
           At <strong>PVR Developers</strong>, we don’t just build homes —
           we create <span style="color:#d3a87c;font-weight:600;">a lifestyle of elegance and comfort</span>.
         </p>
-        <a href="https://api.whatsapp.com/send?phone=919953626969" target="_blank" class="btn-primary">Book Your Appointment</a>
+        <a href="https://api.whatsapp.com/send?phone=919953626969" target="_blank" class="btn-primary">Book Your
+          Appointment</a>
         <a href="#projects" class="btn-secondary">Explore Our Work</a>
       </div>
     </div>
@@ -131,58 +132,112 @@
   </section>
 
   <!-- ===== SERVICES SECTION ===== -->
- <section id="services" class="services section">
-  <div class="container text-center">
-    <h5 class="section-subtitle">Our Expertise</h5>
-    <h2 class="section-title">What We <span>Offer</span></h2>
-    <p class="section-intro">
-      From concept to completion, we deliver excellence across every service line.
-    </p>
+  <section id="services" class="services section">
+    <div class="container text-center">
+      <h5 class="section-subtitle">Our Expertise</h5>
+      <h2 class="section-title">What We <span>Offer</span></h2>
+      <p class="section-intro">
+        From concept to completion, we deliver excellence across every service line.
+      </p>
 
-    <div class="row g-4 mt-5">
-      <!-- Service Card -->
-      <div class="col-md-6 col-lg-3">
-        <div class="service-card">
-          <div class="icon-box">
-            <i class="fas fa-drafting-compass"></i>
+      <div class="row g-4 mt-5">
+        <!-- Service Card -->
+        <div class="col-md-6 col-lg-3">
+          <div class="service-card">
+            <div class="icon-box">
+              <i class="fas fa-drafting-compass"></i>
+            </div>
+            <h4>Architecture</h4>
+            <p>Innovative designs tailored to modern lifestyles with structural perfection.</p>
           </div>
-          <h4>Architecture</h4>
-          <p>Innovative designs tailored to modern lifestyles with structural perfection.</p>
         </div>
-      </div>
 
-      <div class="col-md-6 col-lg-3">
-        <div class="service-card">
-          <div class="icon-box">
-            <i class="fas fa-couch"></i>
+        <div class="col-md-6 col-lg-3">
+          <div class="service-card">
+            <div class="icon-box">
+              <i class="fas fa-couch"></i>
+            </div>
+            <h4>Interior Design</h4>
+            <p>Elegant, functional, and vastu-compliant interiors for every space.</p>
           </div>
-          <h4>Interior Design</h4>
-          <p>Elegant, functional, and vastu-compliant interiors for every space.</p>
         </div>
-      </div>
 
-      <div class="col-md-6 col-lg-3">
-        <div class="service-card">
-          <div class="icon-box">
-            <i class="fas fa-hard-hat"></i>
+        <div class="col-md-6 col-lg-3">
+          <div class="service-card">
+            <div class="icon-box">
+              <i class="fas fa-hard-hat"></i>
+            </div>
+            <h4>Construction</h4>
+            <p>End-to-end construction services with superior craftsmanship & quality.</p>
           </div>
-          <h4>Construction</h4>
-          <p>End-to-end construction services with superior craftsmanship & quality.</p>
         </div>
-      </div>
 
-      <div class="col-md-6 col-lg-3">
-        <div class="service-card">
-          <div class="icon-box">
-            <i class="fas fa-balance-scale"></i>
+        <div class="col-md-6 col-lg-3">
+          <div class="service-card">
+            <div class="icon-box">
+              <i class="fas fa-balance-scale"></i>
+            </div>
+            <h4>Vastu Solutions</h4>
+            <p>Harmonizing spaces with energy-aligned vastu principles for prosperity.</p>
           </div>
-          <h4>Vastu Solutions</h4>
-          <p>Harmonizing spaces with energy-aligned vastu principles for prosperity.</p>
         </div>
       </div>
     </div>
+  </section>
+
+
+  
+<!-- ===== INTERIOR STYLES ===== -->
+<section id="interior-styles" class="interior-styles section">
+  <div class="container">
+
+    <!-- Top Heading -->
+    <div class="text-center mb-5">
+      <h5 class="section-subtitle">Our Approach</h5>
+      <h2 class="section-title">Choose Your <span>Interior Style</span></h2>
+      <p class="section-text">We bring your dream space to life with three timeless styles — crafted to perfection, tailored to your taste.</p>
+    </div>
+
+    <!-- 3 Cards in Row -->
+    <div class="interior-row">
+      <!-- Minimal -->
+      <div class="interior-box">
+        <img src="./assets/images/kitchen/image-1.jpg" alt="Minimal Interior">
+        <div class="box-overlay">
+          <h3>Minimal</h3>
+          <span class="line"></span>
+          <p>Clean, functional, and calming designs that embrace simplicity.</p>
+        </div>
+      </div>
+
+      <!-- Luxury -->
+      <div class="interior-box">
+        <img src="./assets/images/kitchen/image-3.jpg" alt="Luxury Interior">
+        <div class="box-overlay">
+          <h3>Luxury</h3>
+          <span class="line"></span>
+          <p>Opulence, golden accents, and rich textures for a sophisticated lifestyle.</p>
+        </div>
+      </div>
+
+      <!-- Classical -->
+      <div class="interior-box">
+        <img src="./assets/images/kitchen/image-4.jpg" alt="Classical Interior">
+        <div class="box-overlay">
+          <h3>Classical</h3>
+          <span class="line"></span>
+          <p>Timeless beauty, symmetry, and grandeur that never fades.</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
+
+
+
+
+
 
 
   <!-- ===== CONSULTATION SECTION ===== -->
@@ -364,7 +419,69 @@
   </section>
 
 
-  
+
+  <!-- ===== FOOTER ===== -->
+  <footer class="footer">
+    <div class="container footer-wrapper">
+
+      <!-- Logo & About -->
+      <div class="footer-col about">
+        <img src="./assets/images/logo.jpg" alt="PVR Developers Logo" class="footer-logo">
+        <p>
+          At <strong>PVR Developers</strong>, we redefine luxury living with precision,
+          elegance, and innovation. From architecture to interiors, we craft
+          spaces that reflect your lifestyle and aspirations.
+        </p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/pvr.developers" target="_blank"><i
+              class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="footer-col links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#consultation">Consultation</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Info -->
+      <div class="footer-col contact">
+        <h4>Contact Us</h4>
+        <p>
+          <a href="https://maps.app.goo.gl/xyz" target="_blank">
+            <i class="fas fa-map-marker-alt"></i> Punjabi Bagh, New Delhi 110058
+          </a>
+        </p>
+        <p>
+          <a href="tel:+919953626969">
+            <i class="fas fa-phone"></i> +91 99536 26969
+          </a>
+        </p>
+        <p>
+          <a href="mailto:info@pvrdevelopers.com">
+            <i class="fas fa-envelope"></i> info@pvrdevelopers.com
+          </a>
+        </p>
+      </div>
+
+    </div>
+
+    <!-- Bottom Bar -->
+    <div class="footer-bottom">
+      <p>© 2025 PVR Developers. All Rights Reserved. | Crafted with ❤️</p>
+    </div>
+  </footer>
+
+
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>
