--- a/index.html
+++ b/index.html
@@ -186,53 +186,54 @@
   </section>
 
 
-  
-<!-- ===== INTERIOR STYLES ===== -->
-<section id="interior-styles" class="interior-styles section">
-  <div class="container">
 
-    <!-- Top Heading -->
-    <div class="text-center mb-5">
-      <h5 class="section-subtitle">Our Approach</h5>
-      <h2 class="section-title">Choose Your <span>Interior Style</span></h2>
-      <p class="section-text">We bring your dream space to life with three timeless styles — crafted to perfection, tailored to your taste.</p>
+  <!-- ===== INTERIOR STYLES ===== -->
+  <section id="interior-styles" class="interior-styles section">
+    <div class="container">
+
+      <!-- Top Heading -->
+      <div class="text-center mb-5">
+        <h5 class="section-subtitle">Our Approach</h5>
+        <h2 class="section-title">Choose Your <span>Interior Style</span></h2>
+        <p class="section-text">We bring your dream space to life with three timeless styles — crafted to perfection,
+          tailored to your taste.</p>
+      </div>
+
+      <!-- 3 Cards in Row -->
+      <div class="interior-row">
+        <!-- Minimal -->
+        <div class="interior-box">
+          <img src="./assets/images/kitchen/image-1.jpg" alt="Minimal Interior">
+          <div class="box-overlay">
+            <h3>Minimal</h3>
+            <span class="line"></span>
+            <p>Clean, functional, and calming designs that embrace simplicity.</p>
+          </div>
+        </div>
+
+        <!-- Luxury -->
+        <div class="interior-box">
+          <img src="./assets/images/kitchen/image-3.jpg" alt="Luxury Interior">
+          <div class="box-overlay">
+            <h3>Luxury</h3>
+            <span class="line"></span>
+            <p>Opulence, golden accents, and rich textures for a sophisticated lifestyle.</p>
+          </div>
+        </div>
+
+        <!-- Classical -->
+        <div class="interior-box">
+          <img src="./assets/images/kitchen/image-4.jpg" alt="Classical Interior">
+          <div class="box-overlay">
+            <h3>Classical</h3>
+            <span class="line"></span>
+            <p>Timeless beauty, symmetry, and grandeur that never fades.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
-
-    <!-- 3 Cards in Row -->
-    <div class="interior-row">
-      <!-- Minimal -->
-      <div class="interior-box">
-        <img src="./assets/images/kitchen/image-1.jpg" alt="Minimal Interior">
-        <div class="box-overlay">
-          <h3>Minimal</h3>
-          <span class="line"></span>
-          <p>Clean, functional, and calming designs that embrace simplicity.</p>
-        </div>
-      </div>
-
-      <!-- Luxury -->
-      <div class="interior-box">
-        <img src="./assets/images/kitchen/image-3.jpg" alt="Luxury Interior">
-        <div class="box-overlay">
-          <h3>Luxury</h3>
-          <span class="line"></span>
-          <p>Opulence, golden accents, and rich textures for a sophisticated lifestyle.</p>
-        </div>
-      </div>
-
-      <!-- Classical -->
-      <div class="interior-box">
-        <img src="./assets/images/kitchen/image-4.jpg" alt="Classical Interior">
-        <div class="box-overlay">
-          <h3>Classical</h3>
-          <span class="line"></span>
-          <p>Timeless beauty, symmetry, and grandeur that never fades.</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
+  </section>
 
 
 
@@ -418,6 +419,63 @@
     </div>
   </section>
 
+  <!-- ===== INSPIRATION SECTION ===== -->
+  <section id="inspiration" class="inspiration section">
+    <div class="container">
+      <div class="inspiration-header">
+        <div class="text-content">
+          <h2 class="section-title">Inspiration for <span>home interior designs</span></h2>
+          <p>Give your home a new look with these interior design ideas curated for you</p>
+        </div>
+        <a href="#" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
+      </div>
+
+      <div class="inspiration-gallery">
+        <div class="inspiration-gallery-item large">
+          <img src="./assets/images/living-room/image-1.jpg" alt="Living Room">
+          <span class="label">Living Room</span>
+        </div>
+
+        <div class="inspiration-gallery-item">
+          <img src="./assets/images/living-room/image-2.jpg" alt="Master Bedroom">
+          <span class="label">Master Bedroom</span>
+        </div>
+
+        <div class="inspiration-gallery-item wide">
+          <img src="./assets/images/living-room/image-3.jpg" alt="False Ceiling">
+          <span class="label">False Ceiling</span>
+        </div>
+
+        <div class="inspiration-gallery-item">
+          <img src="./assets/images/living-room/image-4.jpg" alt="Dining Room">
+          <span class="label">Dining Room</span>
+        </div>
+
+        <div class="inspiration-gallery-item large">
+          <img src="./assets/images/kitchen/image-1.jpg" alt="Kitchen">
+          <span class="label">Kitchen</span>
+        </div>
+
+        <div class="inspiration-gallery-item ">
+          <img src="./assets/images/kitchen/image-2.jpg" alt="Wardrobe">
+          <span class="label">Wardrobe</span>
+        </div>
+
+        <div class="inspiration-gallery-item">
+          <img src="./assets/images/kitchen/image-3.jpg" alt="Bathroom">
+          <span class="label">Bathroom</span>
+        </div>
+
+        <div class="inspiration-gallery-item">
+          <img src="./assets/images/living-room/image-5.jpg" alt="Balcony">
+          <span class="label">Balcony</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 
 
   <!-- ===== FOOTER ===== -->
@@ -434,8 +492,7 @@
         </p>
         <div class="social-links">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/pvr.developers" target="_blank"><i
-              class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/pvr.developers" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
